--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ctd3",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "customizable table for d3.js",
   "main": "ctd3.js",
   "repository": {
@@ -17,6 +17,7 @@
     "grunt-contrib-uglify": "~0.3.2",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-compress": "~0.6.0"
+    "grunt-contrib-compress": "~0.6.0",
+    "grunt-contrib-copy": "~0.8.0"
   }
 }
